--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title:              Josip Končurat's Blog
+title:              Blockchain Gang
 email:              jkoncura@gmail.com
 description:        An engineer's world
 author:             Josip Končurat
