my first post - Why blockchain

--- a/_config.yml
+++ b/_config.yml
@@ -10,6 +10,7 @@ twitter_username:
 github_username:    josipkoncurat
 facebook_username:  
 linkedin_username:  jkoncurat
+youtube_path:       UC466Zn2k9WmcbTLEUe896Cw
 
 # Add your google-analytics ID here to activate google analytics
 google_analytics:   UA-XXXXXXXXX-X # out your google-analytics code
