--- a/_config.yml
+++ b/_config.yml
@@ -23,4 +23,10 @@ plugins:
   - jekyll-feed
   - jekyll-paginate
   - jekyll-sitemap
-  - jekyll-seo-tag 
+  - jekyll-seo-tag
+
+# Disqus Comments
+disqus:
+  # Leave shortname blank to disable comments site-wide.
+  # Disable comments for any post by adding `comments: false` to that post's YAML Front Matter.
+  shortname: blockchaingang
